--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "@koa/cors": "^4.0.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
-    "koa-router": "^11.0.2"
-  }
+    "koa-router": "^11.0.2",
+    "nodemon": "^3.0.1"
+  } 
 }
