--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^11.0.2",
+    "mqtt": "^5.1.2",
     "nodemon": "^3.0.1"
-  } 
+  }
 }
