--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@influxdata/influxdb-client": "^1.33.2",
     "@influxdata/influxdb-client-apis": "^1.33.2",
     "@koa/cors": "^4.0.0",
+    "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^11.0.2",
