--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,6 @@ INFLUX_TOKEN="<YOUR_TOKEN>"
 INFLUX_URL="http://127.0.0.1:8086"
 INFLUX_ORG="ASE2023-GREEN"
 INFLUX_BUCKET="thingy"
+
+THINGY_MONITOR="green-1"
+THINGY_NOTIFICATION="green-2"
