--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^11.0.2",
     "mqtt": "^5.1.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.3"
   }
 }
