--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@influxdata/influxdb-client": "^1.33.2",
     "@influxdata/influxdb-client-apis": "^1.33.2",
     "@koa/cors": "^4.0.0",
+    "co-views": "^2.1.0",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
+    "koa-oauth-server": "^1.0.1",
     "koa-router": "^11.0.2",
     "mqtt": "^5.1.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "oauth2-server": "^3.1.1",
+    "pg-promise": "^11.5.4"
   }
 }
