--- a/.env.template
+++ b/.env.template
@@ -3,5 +3,10 @@ INFLUX_URL="http://127.0.0.1:8086"
 INFLUX_ORG="ASE2023-GREEN"
 INFLUX_BUCKET="thingy"
 
+PGUSER="postgres"
+PGPASSWORD="<YOUR_PASSWORD>"
+PGPORT="5432"
+PGDATABASE="thingy-green-db"
+
 THINGY_MONITOR="green-1"
 THINGY_NOTIFICATION="green-2"
