--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@koa/cors": "^4.0.0",
     "co-views": "^2.1.0",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^11.0.2",
