--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^11.0.2",
     "mqtt": "^5.1.2",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-format": "^1.0.4"
   }
 }
