--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "koa-route": "^3.2.0",
     "koa-router": "^11.0.2",
     "koa-websocket": "^7.0.0",
+    "koa2-swagger-ui": "^5.10.0",
     "mqtt": "^5.1.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "pg-format": "^1.0.4",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "yamljs": "^0.3.0"
   }
 }
